Adjusting from QA tests