@@ -12,6 +12,7 @@ import com.xts.stock.control.usecase.writeoff.gateway.WriteOffGateway;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
+import java.util.ArrayList;
 import java.util.List;
 import java.util.stream.Collectors;
 
@@ -20,64 +21,69 @@ import java.util.stream.Collectors;
 public class GetConsumptionByCodeUseCase {
 
     private final WriteOffGateway writeOffGateway;
-    private final SupplierGateway supplierGateway;
 
     public List<ConsumptionConsultResponseDomain> execute(final ConsumptionConsultRequestDomain requestDomain) {
-        final List<SupplierDomain> allSuppliers = supplierGateway.getAllSuppliers();
-        final String materialName = getMaterialName(requestDomain, allSuppliers);
 
         final List<WriteOffDomain> writeOffDomainList = writeOffGateway.getWriteOffsByDate(
                 requestDomain.getFirstDay(), requestDomain.getLastDay());
 
-        final List<ConsumptionConsultResponseDomain> consumptionConsultList = writeOffDomainList.stream()
-                .flatMap(writeOff -> writeOff.getMaterials().stream())
-                .filter(material -> material.getName().equals(materialName))
-                .collect(Collectors.groupingBy(
-                        WriteOffMaterialsDomain::getName,
-                        Collectors.groupingBy(
-                                material -> material.getLength() + material.getWidth(),
-                                Collectors.collectingAndThen(
-                                        Collectors.toList(),
-                                        materialsList -> {
-                                            final WriteOffMaterialsDomain firstMaterial = materialsList.get(0);
-                                            int totalLengthUsed = materialsList.stream()
-                                                    .mapToInt(material -> Integer.parseInt(material.getLengthUsed()))
-                                                    .sum();
-                                            int totalRemovedFromStock = materialsList.size();
-                                            return ConsumptionConsultResponseDomain.builder()
-                                                    .supplierName(firstMaterial.getSupplier())
-                                                    .materialName(materialName)
-                                                    .width(firstMaterial.getWidth())
-                                                    .length(firstMaterial.getLength())
-                                                    .lengthUsed(totalLengthUsed)
-                                                    .removedFromStock(totalRemovedFromStock)
-                                                    .build();
-                                        }
-                                )
-                        )
-                ))
-                .values().stream()
-                .flatMap(map -> map.values().stream())
-                .toList();
+        final List<ConsumptionConsultResponseDomain> consumptionConsultList =
+
+                        writeOffDomainList.stream()
+                                .flatMap(writeOff -> writeOff.getMaterials().stream())
+                                .filter(material ->
+                                        material.getSupplier().equalsIgnoreCase(requestDomain.getSupplierName()))
+                                .collect(Collectors.groupingBy(
+                                        WriteOffMaterialsDomain::getName,
+                                        Collectors.groupingBy(
+                                                material -> material.getLength() + material.getWidth(),
+                                                Collectors.collectingAndThen(
+                                                        Collectors.toList(),
+                                                        materialsList -> {
+                                                            final WriteOffMaterialsDomain firstMaterial =
+                                                                    materialsList.get(0);
+                                                            int totalLengthUsed = materialsList.stream()
+                                                                    .mapToInt(material ->
+                                                                            Integer.parseInt(material.getLengthUsed()))
+                                                                    .sum();
+                                                            int totalRemovedFromStock = materialsList.size();
+                                                            return ConsumptionConsultResponseDomain.builder()
+                                                                    .materialName(firstMaterial.getName())
+                                                                    .width(firstMaterial.getWidth())
+                                                                    .length(firstMaterial.getLength())
+                                                                    .lengthUsed(totalLengthUsed)
+                                                                    .removedFromStock(totalRemovedFromStock)
+                                                                    .build();
+                                                        }
+                                                )
+                                        )
+                                ))
+                                .values().stream()
+                                .flatMap(map -> map.values().stream()).toList();
 
         if (consumptionConsultList.isEmpty()) {
-            throw new StandardException("A data selecionada não possui consumo para o material " + materialName +
-                    ", que possui código " + requestDomain.getMaterialCode());
+            throw new StandardException("A data selecionada não possui consumo para o fornecedor: " +
+                    requestDomain.getSupplierName());
         }
 
         return consumptionConsultList;
     }
 
-    private static String getMaterialName(final ConsumptionConsultRequestDomain requestDomain,
+    private static List<String> getMaterialName(final ConsumptionConsultRequestDomain requestDomain,
                                           final List<SupplierDomain> allSuppliers) {
 
         return allSuppliers.stream()
-                .flatMap(supplier -> supplier.getMaterialList().stream())
-                .filter(material -> material.getCode().equals(requestDomain.getMaterialCode()))
+                .filter(supplier -> supplier.getSupplierCnpj().equalsIgnoreCase(requestDomain.getSupplierCnpj()))
                 .findFirst()
-                .map(MaterialDomain::getName)
-                .orElseThrow(() -> new StandardException("O material com código " +
-                        requestDomain.getMaterialCode() + " não existe."));
+                .map(supplierDomain -> {
+                    final List<String> materialsName = new ArrayList<>();
+                    supplierDomain.getMaterialList().forEach(materialDomain ->
+                            materialsName.add(materialDomain.getName()));
+
+                    return materialsName;
+                })
+                .orElseThrow(() -> new StandardException("Um erro inesperado ocorreu, se persistir favor consultar " +
+                        "o suporte."));
     }
 }
 
